Bug fixed:"Alignment in division and some styling"

--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@
 #abovesection {
   background-color: white;
   padding-left: 20px;
-  max-width: 1320px;
+  max-width: 1310px;
   margin-left: 200px;
 }
 #belowsection {
-  max-width: 1565px;
+  max-width: 1556px;
   padding-left: 20px;
   margin-left: 200px;
-  margin-right: 20px;
+  margin-right: 30px;
   background-color: white;
 }
 header {
@@ -25,9 +25,10 @@ header {
   height: 60px;
 }
 #login {
-  margin-top: 10px;
   padding: 3px 40px;
   color: rgb(45, 113, 238);
+  font-size: medium;
+  font-weight: 500;
   background-color: white;
 }
 #myad {
@@ -37,9 +38,10 @@ header {
   float: right;
 }
 #cart {
-  font-size: 24px;
+  font-size: normal;
   color: white;
   padding-right: 20px;
+  background-color: rgb(45, 113, 238);
   padding-left: 20px;
 }
 #logbtn {
@@ -49,13 +51,35 @@ header {
   padding-right: 20px;
   padding-left: 20px;
   color: white;
+  margin-left: 20px;
+  font-size: medium;
+  font-weight: 1000;
 }
 #info {
   padding-top: 10px;
 }
-#viewall {
+#viewall1 {
   margin-left: 80px;
 }
+#viewall2 {
+  margin-left: 120px;
+}
+
 #secondrowproducts {
   margin-right: 380px;
+}
+#text {
+  padding-top: 10px;
+}
+#timer {
+  padding-top: 5px;
+}
+#products {
+  margin-left: 50px;
+}
+#lava {
+  margin-left: 25px;
+}
+#carousel {
+  height: 180px;
 }
